modificaciones en las paginas

--- a/pages/singin.html
+++ b/pages/singin.html
@@ -5,10 +5,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>MUNAY homedeco|Log-in</title>
+	<title>MUNAY homedeco | Log-in</title>
 	<link rel="icon" href="../assets/favico.ico">
 	<meta name="description"
-		content="TIENDA ONLINE DE DECORACIÓN - Encontrá Todo en MUNAY homedeco, Entrá y conocé! Velas de soja aromatizadas, pintura en madera , sahumerios y más.">
+		content="TIENDA ONLINE DE DECORACIÓN - Encontrá Todo en MUNAY homedeco, Entrá y conocé! Registrate en nuestra en nuestra pagina y se parte de nosotros.">
 	<meta name="keywords" content="tienda,velas,login,usuario,contraseña">
 	<meta name="author" content="Savignone Facundo">
 	<meta name="robots" content="index">
