--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,10 +5,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>MUNAY homedeco|Contacto</title>
+	<title>MUNAY homedeco | Contacto</title>
 	<link rel="icon" href="../assets/favico.ico">
 	<meta name="description"
-		content="TIENDA ONLINE DE DECORACIÓN - Encontrá Todo en MUNAY homedeco, Entrá y conocé! Velas de soja aromatizadas, pintura en madera , sahumerios y más.">
+		content="TIENDA ONLINE DE DECORACIÓN - Encontrá Todo en MUNAY homedeco, Entrá y conocé! Dejanos tus datos y tendras todas nuestras novedades.">
 	<meta name="keywords" content="tienda,velas,contacto,comunicación,consultas">
 	<meta name="author" content="Savignone Facundo">
 	<meta name="robots" content="index">
