--- a/pages/login.html
+++ b/pages/login.html
@@ -8,7 +8,7 @@
 	<title>MUNAY homedeco|Sing-in</title>
 	<link rel="icon" href="../assets/favico.ico">
 	<meta name="description"
-		content="TIENDA ONLINE DE DECORACIÓN - Encontrá Todo en MUNAY homedeco, Entrá y conocé! Velas de soja aromatizadas, pintura en madera , sahumerios y más.">
+		content="TIENDA ONLINE DE DECORACIÓN - Encontrá Todo en MUNAY homedeco, Entrá y conocé! Inicia sesion en nuestra en nuestra pagina y hace tus pedidos.">
 	<meta name="keywords" content="tienda,velas,singin,usuario,contraseña,registro">
 	<meta name="author" content="Savignone Facundo">
 	<meta name="robots" content="index">
