modificaciones de links-redes y barratop

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -36,13 +36,12 @@
 			<div class="header-top">
 				<div class="header-top__social">
 					<ul class="header-top__list">
-						<li class="list__item"><a href="https://www.instagram.com" target="_blank"><i
+						<li class="list__item"><a href="https://www.instagram.com/munay_homedeco" target="_blank"><i
 									class="fab fa-instagram"></i></a></li>
-						<li class="list__item"><a href="https://www.facebook.com" target="_blank"><i
+						<li class="list__item"><a href="https://www.facebook.com/munayhomedeco/" target="_blank"><i
 									class="fab fa-facebook"></i></a></li>
 					</ul>
-					<p class="list__item list__item--p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel
-						similique suscipit <br> aspernatur eius cumque impedit</p>
+					<p class="list__item list__item--p">Explosión de color y de magia<br>  Nos da un  espacio para crecer y ser nosotros mismos.</p>
 				</div>
 			</div>
 		</div>
@@ -130,8 +129,8 @@
 			<div class="container">
 				<img src="../assets/imagotipo.png" alt="logo" style="width: 40%">
 				<ul class="list-inline">
-					<li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
-					<li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
+					<li class="list-inline-item"><a href="https://www.facebook.com/munayhomedeco/"><i class="fab fa-facebook"></i></a></li>
+					<li class="list-inline-item"><a href="https://www.instagram.com/munay_homedeco"><i class="fab fa-instagram"></i></a></li>
 				</ul>
 				<ul class="list-inline">
 					<li class="list-inline-item footer-menu"><a href="../pages/nosotros.html">Nosotros</a></li>
@@ -141,7 +140,7 @@
 				</ul>
 			</div>
 			<div class="footerb">
-				<p>Copyright ©2021 – Munay Homedeco – Designed By FACUNDO SAVIGNONE</p>
+				<p>Copyright ©2021 - Munay Homedeco - Designed By FACUNDO SAVIGNONE</p>
 			</div>
 		</section>
 		<!--BOOTSTRAP 4.6 JS-->
