Agrego proximo producto en tienda

--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -193,6 +193,16 @@
 						</div>
 					</div>
 				</div>
+				<div class="col mb-4">
+				</div>
+				<div class="col mb-4">
+					<div class="card card-efecto shadow bg-body rounded-sm">
+						<img src="../assets/soon.jpg" class="card-img-top" alt="vela 2">
+						<div class="card-body text-center">
+							<h5 class="card-title text-center">Proximamente</h5>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
