--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<li class="list__item"><a href="https://www.facebook.com/munayhomedeco/" target="_blank"><i
 									class="fab fa-facebook"></i></a></li>
 					</ul>
-					<p class="list__item list__item--p">Explosión de color y de magia<br>  Nos da un  espacio para crecer y ser nosotros mismos.
+					<p class="list__item list__item--p">Explosión de color y de magia<br> Nos da un  espacio para crecer y ser nosotros mismos.
 						</p>
 				</div>
 			</div>
@@ -269,7 +269,7 @@
 				<li class="list-inline-item footer-menu"><a href="pages/nosotros.html">Nosotros</a></li>
 				<li class="list-inline-item footer-menu"><a href="pages/tienda.html">Tienda</a></li>
 				<li class="list-inline-item footer-menu"><a href="pages/contacto.html">Contacto</a></li>
-				<li class="list-inline-item footer-menu"><a href="pages/singin.html">Mi cuenta</a></li>
+				<li class="list-inline-item footer-menu"><a href="pages/login.html">Mi cuenta</a></li>
 			</ul>
 		</div>
 		<div class="footerb">
