--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -41,7 +41,7 @@
 						<li class="list__item"><a href="https://www.facebook.com/munayhomedeco/" target="_blank"><i
 									class="fab fa-facebook"></i></a></li>
 					</ul>
-					<p class="list__item list__item--p">Explosión de color y de magia<br>  Nos da un  espacio para crecer y ser nosotros mismos.</p>
+					<p class="list__item list__item--p">Explosión de color y magia<br>  Nos da un  espacio para crecer y ser nosotros mismos.</p>
 				</div>
 			</div>
 		</div>
@@ -175,10 +175,10 @@
 				<li class="list-inline-item"><a href="https://www.instagram.com/munay_homedeco"><i class="fab fa-instagram"></i></a></li>
 			</ul>
 			<ul class="list-inline">
-				<li class="list-inline-item footer-menu"><a href="../pages/nosotros.html">Nosotros</a></li>
-				<li class="list-inline-item footer-menu"><a href="../pages/tienda.html">Tienda</a></li>
-				<li class="list-inline-item footer-menu"><a href="../pages/contacto.html">Contacto</a></li>
-				<li class="list-inline-item footer-menu"><a href="../pages/singin.html">Mi cuenta</a></li>
+				<li class="list-inline-item footer-menu"><a href="nosotros.html">Nosotros</a></li>
+				<li class="list-inline-item footer-menu"><a href="tienda.html">Tienda</a></li>
+				<li class="list-inline-item footer-menu"><a href="contacto.html">Contacto</a></li>
+				<li class="list-inline-item footer-menu"><a href="login.html">Mi cuenta</a></li>
 			</ul>
 		</div>
 		<div class="footerb">
