--- a/pages/login.html
+++ b/pages/login.html
@@ -5,11 +5,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>MUNAY homedeco|Sing-in</title>
+	<title>MUNAY homedeco | Log-in</title>
 	<link rel="icon" href="../assets/favico.ico">
 	<meta name="description"
-		content="TIENDA ONLINE DE DECORACIÓN - Encontrá Todo en MUNAY homedeco, Entrá y conocé! Inicia sesion en nuestra en nuestra pagina y hace tus pedidos.">
-	<meta name="keywords" content="tienda,velas,singin,usuario,contraseña,registro">
+		content="TIENDA ONLINE DE DECORACIÓN - Encontrá Todo en MUNAY homedeco, Entrá y conocé! Registrate en nuestra en nuestra pagina y se parte de nosotros.">
+	<meta name="keywords" content="tienda,velas,login,usuario,contraseña">
 	<meta name="author" content="Savignone Facundo">
 	<meta name="robots" content="index">
 	<meta name="copyright" content="MUNAY homedeco">
@@ -41,7 +41,7 @@
 						<li class="list__item"><a href="https://www.facebook.com/munayhomedeco/" target="_blank"><i
 									class="fab fa-facebook"></i></a></li>
 					</ul>
-					<p class="list__item list__item--p">Explosión de color y de magia<br>  Nos da un  espacio para crecer y ser nosotros mismos.</p>
+					<p class="list__item list__item--p">Explosión de color y magia<br>  Nos da un  espacio para crecer y ser nosotros mismos.</p>
 				</div>
 			</div>
 		</div>
@@ -103,7 +103,7 @@
 			<nav aria-label="breadcrumb">
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="../index.html">Inicio</a></li>
-					<li class="breadcrumb-item active" aria-current="page">registrate</li>
+					<li class="breadcrumb-item active" aria-current="page">inicia sesión</li>
 				</ol>
 			</nav>
 		</div>
@@ -111,62 +111,20 @@
 	<!--SECCION-->
 	<section id="nosotros">
 		<div class="container text-center">
-			<h1 class="title">inicia sesion</h1>
+			<h1 class="title">Inicia sesión</h1>
 		</div>
 	</section>
 	<section>
 		<div class="container">
 			<form>
 				<div class="form-group" data-aos="zoom-in-up" data-aos-duration="2000" data-aos-offset="200">
-					<label for="validationDefault01">Nombre</label>
-					<input type="text" class="form-control" id="validationDefault01" value="" required>
-				</div>
-				<div class="form-group" data-aos="zoom-in-up" data-aos-duration="2000" data-aos-offset="200">
-					<label for="validationDefault01">Apellido</label>
-					<input type="text" class="form-control" id="validationDefault01" value="" required>
-				</div>
-				<div class="form-group" data-aos="zoom-in-up" data-aos-duration="2000" data-aos-offset="200">
-					<label for="validationDefault01">Telefono</label>
-					<input type="text" class="form-control" id="validationDefault01" value="" placeholder="00-0000-0000"
+					<label for="exampleInputEmail1">Direccion de email</label>
+					<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
 						required>
 				</div>
-				<div class="form-row">
-					<div class="form-group col-md-6" data-aos="zoom-in-up" data-aos-duration="2000"
-						data-aos-offset="200">
-						<label for="inputEmail4">Direccion de email</label>
-						<input type="email" class="form-control" id="inputEmail4" required>
-					</div>
-					<div class="form-group col-md-6" data-aos="zoom-in-up" data-aos-duration="2000"
-						data-aos-offset="200">
-						<label for="inputPassword4">Contraseña</label>
-						<input type="password" class="form-control" id="inputPassword4" required>
-					</div>
-				</div>
 				<div class="form-group" data-aos="zoom-in-up" data-aos-duration="2000" data-aos-offset="200">
-					<label for="inputAddress2">Direccion</label>
-					<input type="text" class="form-control" id="inputAddress2" required>
-				</div>
-				<div class="form-row">
-					<div class="form-group col-md-6" data-aos="zoom-in-up" data-aos-duration="2000"
-						data-aos-offset="200">
-						<label for="inputCity">Ciudad</label>
-						<input type="text" class="form-control" id="inputCity" required>
-					</div>
-					<div class="form-group col-md-4" data-aos="zoom-in-up" data-aos-duration="2000"
-						data-aos-offset="200">
-						<label for="inputState">Provincia</label>
-						<select id="inputState" class="form-control" required>
-							<option selected>Elegir...</option>
-							<option>Ciudad autonoma de Buenos Aires</option>
-							<option>Provincia de Buenos Aires</option>
-							<option>Neuquen</option>
-						</select>
-					</div>
-					<div class="form-group col-md-2" data-aos="zoom-in-up" data-aos-duration="2000"
-						data-aos-offset="200">
-						<label for="inputZip">Codigo postal</label>
-						<input type="text" class="form-control" id="inputZip" required>
-					</div>
+					<label for="inputPassword4">Contraseña</label>
+					<input type="password" class="form-control" id="inputPassword4" required>
 				</div>
 				<div class="custom-control custom-switch" class="form-group" data-aos="zoom-in-up"
 					data-aos-duration="2000" data-aos-offset="200">
@@ -174,40 +132,39 @@
 					<label class="custom-control-label" for="customSwitch1" required>¿Confirmas estos datos?</label>
 				</div>
 				<button type="submit" class="btn btn-light shadow p-2 mb-5 bg-body rounded" class="form-group"
-					data-aos="fade-left" data-aos-duration="2000" data-aos-offset="200">Enviar</button>
+					data-aos="zoom-in-up" data-aos-duration="2000" data-aos-offset="200">Enviar</button>
 			</form>
 		</div>
-	</section>
-	<!--FOOTER-->
-	<section id="footer">
-		<div class="container">
-			<img src="../assets/imagotipo.png" alt="logo" style="width: 40%">
-			<ul class="list-inline">
-				<li class="list-inline-item"><a href="https://www.facebook.com/munayhomedeco/"><i class="fab fa-facebook"></i></a></li>
-				<li class="list-inline-item"><a href="https://www.instagram.com/munay_homedeco"><i class="fab fa-instagram"></i></a></li>
-			</ul>
-			<ul class="list-inline">
-				<li class="list-inline-item footer-menu"><a href="../pages/nosotros.html">Nosotros</a></li>
-				<li class="list-inline-item footer-menu"><a href="../pages/tienda.html">Tienda</a></li>
-				<li class="list-inline-item footer-menu"><a href="../pages/contacto.html">Contacto</a></li>
-				<li class="list-inline-item footer-menu"><a href="../pages/singin.html">Mi cuenta</a></li>
-			</ul>
-		</div>
-		<div class="footerb">
-			<p>Copyright ©2021 - Munay Homedeco - Designed By FACUNDO SAVIGNONE</p>
-		</div>
-	</section>
-	<!--BOOTSTRAP 4.6 JS-->
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-		crossorigin="anonymous"></script>
-	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-	<script>
-		AOS.init();
-	</script>
+		<!--FOOTER-->
+		<section id="footer">
+			<div class="container">
+				<img src="../assets/imagotipo.png" alt="logo" style="width: 40%">
+				<ul class="list-inline">
+					<li class="list-inline-item"><a href="https://www.facebook.com/munayhomedeco/"><i class="fab fa-facebook"></i></a></li>
+					<li class="list-inline-item"><a href="https://www.instagram.com/munay_homedeco"><i class="fab fa-instagram"></i></a></li>
+				</ul>
+				<ul class="list-inline">
+					<li class="list-inline-item footer-menu"><a href="nosotros.html">Nosotros</a></li>
+					<li class="list-inline-item footer-menu"><a href="tienda.html">Tienda</a></li>
+					<li class="list-inline-item footer-menu"><a href="contacto.html">Contacto</a></li>
+					<li class="list-inline-item footer-menu"><a href="login.html">Mi cuenta</a></li>
+				</ul>
+			</div>
+			<div class="footerb">
+				<p>Copyright ©2021 - Munay Homedeco - Designed By FACUNDO SAVIGNONE</p>
+			</div>
+		</section>
+		<!--BOOTSTRAP 4.6 JS-->
+		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+			integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+			crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+			crossorigin="anonymous"></script>
+		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+		<script>
+			AOS.init();
+		</script>
 </body>
 
 </html>
