--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
 						<li class="list__item"><a href="https://www.facebook.com/munayhomedeco/" target="_blank"><i
 									class="fab fa-facebook"></i></a></li>
 					</ul>
-					<p class="list__item list__item--p">Explosión de color y de magia<br> Nos da un  espacio para crecer y ser nosotros mismos.
-						</p>
+					<p class="list__item list__item--p">Explosión de color y de magia<br> Nos da un espacio para crecer
+						y ser nosotros mismos.
+					</p>
 				</div>
 			</div>
 		</div>
@@ -74,7 +75,7 @@
 							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="mi cuenta"></i>Mi
 							cuenta</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="pages/login.html">Inicia seción</a>
+							<a class="dropdown-item" href="pages/login.html">Inicia sesión</a>
 							<a class="dropdown-item" href="pages/singin.html">Registrate</a>
 						</div>
 					</li>
@@ -165,14 +166,14 @@
 		<div class="container categorias">
 			<div class="container-fluid">
 				<div class="content-center" data-aos="zoom-in-up" data-aos-duration="2000" data-aos-offset="200">
-					<h2>Categorias</h2>
+					<h2>Categorías</h2>
 				</div>
 				<div class="row" data-aos="zoom-in-up" data-aos-duration="2000" data-aos-offset="200">
 					<div class="col-md-6">
 						<div class="categorias-container shadow mb-5 bg-body rounded-sm">
 							<div class="categorias-detalles">
 								<h3>Todos los productos</h3>
-								<p>- Mira nuestro catalogo</p>
+								<p>- Mira nuestro catálogo</p>
 							</div>
 							<a href="pages/tienda.html"><img src="assets/modelo1.jpg" alt="categoria1"
 									class="img-fluid"></a>
@@ -182,7 +183,7 @@
 						<div class="categorias-container shadow mb-5 bg-body rounded-sm">
 							<div class="categorias-detalles">
 								<h3>Pintrura en madera</h3>
-								<p>- Mira nuestro catalogo</p>
+								<p>- Mira nuestro catálogo</p>
 							</div>
 							<a href="pages/tienda.html"><img src="assets/caja_odisea.jpg" alt="categoria2"
 									class="img-fluid"></a>
@@ -192,7 +193,7 @@
 						<div class="categorias-container shadow mb-5 bg-body rounded-sm">
 							<div class="categorias-detalles">
 								<h3>Difusores y perfuminas</h3>
-								<p>- Mira nuestro catalogo</p>
+								<p>- Mira nuestro catálogo</p>
 							</div>
 							<a href="pages/tienda.html"><img src="assets/sahumeriuos1png.png" alt="categoria4"
 									class="img-fluid"></a>
@@ -202,7 +203,7 @@
 						<div class="categorias-container shadow mb-5 bg-body rounded-sm">
 							<div class="categorias-detalles">
 								<h3>Velas de soja</h3>
-								<p>- Mira nuestro catalogo</p>
+								<p>- Mira nuestro catálogo</p>
 							</div>
 							<a href="pages/tienda.html"><img src="assets/vela1.jpg" alt="categoria3"
 									class="img-fluid"></a>
@@ -262,8 +263,10 @@
 		<div class="container">
 			<img src="assets/imagotipo.png" alt="logo" style="width: 40%">
 			<ul class="list-inline">
-				<li class="list-inline-item"><a href="https://www.facebook.com/munayhomedeco/"><i class="fab fa-facebook"></i></a></li>
-				<li class="list-inline-item"><a href="https://www.instagram.com/munay_homedeco"><i class="fab fa-instagram"></i></a></li>
+				<li class="list-inline-item"><a href="https://www.facebook.com/munayhomedeco/"><i
+							class="fab fa-facebook"></i></a></li>
+				<li class="list-inline-item"><a href="https://www.instagram.com/munay_homedeco"><i
+							class="fab fa-instagram"></i></a></li>
 			</ul>
 			<ul class="list-inline">
 				<li class="list-inline-item footer-menu"><a href="pages/nosotros.html">Nosotros</a></li>
