--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -41,7 +41,8 @@
 						<li class="list__item"><a href="https://www.facebook.com/munayhomedeco/" target="_blank"><i
 									class="fab fa-facebook"></i></a></li>
 					</ul>
-					<p class="list__item list__item--p">Explosión de color y magia<br>  Nos da un  espacio para crecer y ser nosotros mismos.</p>
+					<p class="list__item list__item--p">Explosión de color y magia<br> Nos da un espacio para crecer y
+						ser nosotros mismos.</p>
 				</div>
 			</div>
 		</div>
@@ -72,7 +73,7 @@
 							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="mi cuenta"></i>Mi
 							cuenta</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="login.html">Inicia seción</a>
+							<a class="dropdown-item" href="login.html">Inicia sesión</a>
 							<a class="dropdown-item" href="singin.html">Registrate</a>
 						</div>
 					</li>
@@ -118,10 +119,14 @@
 		<div class="container-fluid">
 			<div class="section1__description">
 				<img src="../assets/logo_black.png" alt="logo-Munay">
-				<p data-aos="zoom-in-up" data-aos-duration="2000" data-aos-offset="200"> Hola del otro lado de la pantalla. Somos <b>Munay Homedeco</b>, 
-					un nuevo <br> emprendimieto buscando llenar tu hogar de <b>luz, aroma y color </b>, creando momentos unicos.<br> Nos inspiramos en nuestras <b>culturas aborigenes</b>, respetando la naturaleza y sus colores. <br>Ellas dan  nombre a cada una de nuestras creaciones. <br>Nuestro norte es ofrecer <b>la mejor calidad</b> en lo 
+				<p data-aos="zoom-in-up" data-aos-duration="2000" data-aos-offset="200"> Hola del otro lado de la
+					pantalla. Somos <b>Munay Homedeco</b>,
+					un nuevo <br> emprendimiento buscando llenar tu hogar de <b>luz, aroma y color </b>, creando
+					momentos unicos.<br> Nos inspiramos en nuestras <b>culturas aborigenes</b>, respetando la naturaleza
+					y sus colores. <br>Ellas dan nombre a cada una de nuestras creaciones. <br>Nuestro norte es ofrecer
+					<b>la mejor calidad</b> en lo
 					que hacemos.
-				</p> 
+				</p>
 			</div>
 		</div>
 		<!--FOOTER-->
@@ -129,8 +134,10 @@
 			<div class="container">
 				<img src="../assets/imagotipo.png" alt="logo" style="width: 40%">
 				<ul class="list-inline">
-					<li class="list-inline-item"><a href="https://www.facebook.com/munayhomedeco/"><i class="fab fa-facebook"></i></a></li>
-					<li class="list-inline-item"><a href="https://www.instagram.com/munay_homedeco"><i class="fab fa-instagram"></i></a></li>
+					<li class="list-inline-item"><a href="https://www.facebook.com/munayhomedeco/"><i
+								class="fab fa-facebook"></i></a></li>
+					<li class="list-inline-item"><a href="https://www.instagram.com/munay_homedeco"><i
+								class="fab fa-instagram"></i></a></li>
 				</ul>
 				<ul class="list-inline">
 					<li class="list-inline-item footer-menu"><a href="nosotros.html">Nosotros</a></li>
