--- a/pages/singin.html
+++ b/pages/singin.html
@@ -41,7 +41,8 @@
 						<li class="list__item"><a href="https://www.facebook.com/munayhomedeco/" target="_blank"><i
 									class="fab fa-facebook"></i></a></li>
 					</ul>
-					<p class="list__item list__item--p">Explosión de color y magia<br>  Nos da un  espacio para crecer y ser nosotros mismos.</p>
+					<p class="list__item list__item--p">Explosión de color y magia<br> Nos da un espacio para crecer y
+						ser nosotros mismos.</p>
 				</div>
 			</div>
 		</div>
@@ -72,7 +73,7 @@
 							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="mi cuenta"></i>Mi
 							cuenta</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="login.html">Inicia seción</a>
+							<a class="dropdown-item" href="login.html">Inicia sesión</a>
 							<a class="dropdown-item" href="singin.html">Registrate</a>
 						</div>
 					</li>
@@ -133,7 +134,7 @@
 				<div class="form-row">
 					<div class="form-group col-md-6" data-aos="zoom-in-up" data-aos-duration="2000"
 						data-aos-offset="200">
-						<label for="inputEmail4">Direccion de email</label>
+						<label for="inputEmail4">Dirección de email</label>
 						<input type="email" class="form-control" id="inputEmail4" required>
 					</div>
 					<div class="form-group col-md-6" data-aos="zoom-in-up" data-aos-duration="2000"
@@ -143,7 +144,7 @@
 					</div>
 				</div>
 				<div class="form-group" data-aos="zoom-in-up" data-aos-duration="2000" data-aos-offset="200">
-					<label for="inputAddress2">Direccion</label>
+					<label for="inputAddress2">Dirección</label>
 					<input type="text" class="form-control" id="inputAddress2" required>
 				</div>
 				<div class="form-row">
@@ -183,8 +184,10 @@
 		<div class="container">
 			<img src="../assets/imagotipo.png" alt="logo" style="width: 40%">
 			<ul class="list-inline">
-				<li class="list-inline-item"><a href="https://www.facebook.com/munayhomedeco/"><i class="fab fa-facebook"></i></a></li>
-				<li class="list-inline-item"><a href="https://www.instagram.com/munay_homedeco"><i class="fab fa-instagram"></i></a></li>
+				<li class="list-inline-item"><a href="https://www.facebook.com/munayhomedeco/"><i
+							class="fab fa-facebook"></i></a></li>
+				<li class="list-inline-item"><a href="https://www.instagram.com/munay_homedeco"><i
+							class="fab fa-instagram"></i></a></li>
 			</ul>
 			<ul class="list-inline">
 				<li class="list-inline-item footer-menu"><a href="nosotros.html">Nosotros</a></li>
