--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -74,7 +74,7 @@
 							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="mi cuenta"></i>Mi
 							cuenta</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="login.html">Inicia seción</a>
+							<a class="dropdown-item" href="login.html">Inicia sesión</a>
 							<a class="dropdown-item" href="singin.html">Registrate</a>
 						</div>
 					</li>
@@ -167,7 +167,7 @@
 					<div class="card card-efecto shadow bg-body rounded-sm">
 						<img src="../assets/caja_botanica.jpg" class="card-img-top" alt="vela 2">
 						<div class="card-body text-center">
-							<h5 class="card-title text-center">Caja Botanica</h5>
+							<h5 class="card-title text-center">Caja BotánIca</h5>
 							<a href="#" class="btn btn-primary btn-lg btn-block" role="button" aria-pressed="true">ver
 								producto</a>
 						</div>
@@ -199,7 +199,7 @@
 					<div class="card card-efecto shadow bg-body rounded-sm">
 						<img src="../assets/soon.jpg" class="card-img-top" alt="vela 2">
 						<div class="card-body text-center">
-							<h5 class="card-title text-center">Proximamente</h5>
+							<h5 class="card-title text-center">Próximamente</h5>
 						</div>
 					</div>
 				</div>
@@ -211,8 +211,10 @@
 		<div class="container">
 			<img src="../assets/imagotipo.png" alt="logo" style="width: 40%">
 			<ul class="list-inline">
-				<li class="list-inline-item"><a href="https://www.facebook.com/munayhomedeco/"><i class="fab fa-facebook"></i></a></li>
-				<li class="list-inline-item"><a href="https://www.instagram.com/munay_homedeco"><i class="fab fa-instagram"></i></a></li>
+				<li class="list-inline-item"><a href="https://www.facebook.com/munayhomedeco/"><i
+							class="fab fa-facebook"></i></a></li>
+				<li class="list-inline-item"><a href="https://www.instagram.com/munay_homedeco"><i
+							class="fab fa-instagram"></i></a></li>
 			</ul>
 			<ul class="list-inline">
 				<li class="list-inline-item footer-menu"><a href="nosotros.html">Nosotros</a></li>
