--- a/pages/login.html
+++ b/pages/login.html
@@ -41,7 +41,8 @@
 						<li class="list__item"><a href="https://www.facebook.com/munayhomedeco/" target="_blank"><i
 									class="fab fa-facebook"></i></a></li>
 					</ul>
-					<p class="list__item list__item--p">Explosión de color y magia<br>  Nos da un  espacio para crecer y ser nosotros mismos.</p>
+					<p class="list__item list__item--p">Explosión de color y magia<br> Nos da un espacio para crecer y
+						ser nosotros mismos.</p>
 				</div>
 			</div>
 		</div>
@@ -72,7 +73,7 @@
 							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="mi cuenta"></i>Mi
 							cuenta</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="login.html">Inicia seción</a>
+							<a class="dropdown-item" href="login.html">Inicia sesión</a>
 							<a class="dropdown-item" href="singin.html">Registrate</a>
 						</div>
 					</li>
@@ -140,8 +141,10 @@
 			<div class="container">
 				<img src="../assets/imagotipo.png" alt="logo" style="width: 40%">
 				<ul class="list-inline">
-					<li class="list-inline-item"><a href="https://www.facebook.com/munayhomedeco/"><i class="fab fa-facebook"></i></a></li>
-					<li class="list-inline-item"><a href="https://www.instagram.com/munay_homedeco"><i class="fab fa-instagram"></i></a></li>
+					<li class="list-inline-item"><a href="https://www.facebook.com/munayhomedeco/"><i
+								class="fab fa-facebook"></i></a></li>
+					<li class="list-inline-item"><a href="https://www.instagram.com/munay_homedeco"><i
+								class="fab fa-instagram"></i></a></li>
 				</ul>
 				<ul class="list-inline">
 					<li class="list-inline-item footer-menu"><a href="nosotros.html">Nosotros</a></li>
