alt-iamgenes y categorias

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 					<div class="col-md-6">
 						<div class="categorias-container shadow mb-5 bg-body rounded-sm">
 							<div class="categorias-detalles">
-								<h3>Difusores y perfuminas</h3>
+								<h3>Sahumerios</h3>
 								<p>- Mira nuestro catálogo</p>
 							</div>
 							<a href="pages/tienda.html"><img src="assets/sahumeriuos1png.png" alt="categoria4"
@@ -223,7 +223,7 @@
 				data-aos-offset="200">
 				<div class="col mb-4">
 					<div class="card card-efecto shadow mb-5 bg-body rounded-sm">
-						<img src="assets/vela3.jpg" class="card-img-top" alt="vela 1">
+						<img src="assets/vela3.jpg" class="card-img-top" alt="vela_sumak">
 						<div class="card-body text-center">
 							<h5 class="card-title text-center">vela sumak</h5>
 							<a href="pages/tienda.html" class="btn btn-primary btn-lg btn-block" role="button"
@@ -234,7 +234,7 @@
 				</div>
 				<div class="col mb-4">
 					<div class="card card-efecto shadow bg-body rounded-sm">
-						<img src="assets/caja_corazon.jpg" class="card-img-top" alt="vela 2">
+						<img src="assets/caja_corazon.jpg" class="card-img-top" alt="caja_corazon">
 						<div class="card-body text-center">
 							<h5 class="card-title text-center">Caja corazón</h5>
 							<a href="pages/tienda.html" class="btn btn-primary btn-lg btn-block" role="button"
@@ -245,7 +245,7 @@
 				</div>
 				<div class="col mb-4">
 					<div class="card card-efecto shadow bg-body rounded-sm">
-						<img src="assets/vela2.jpg" class="card-img-top" alt="vela 3">
+						<img src="assets/vela2.jpg" class="card-img-top" alt="vela_inti">
 						<div class="card-body text-center">
 							<h5 class="card-title text-center">vela inti</h5>
 							<a href="pages/tienda.html" class="btn btn-primary btn-lg btn-block" role="button"
