--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -127,13 +127,13 @@
 						<ul class="list-group list-group-flush">
 							<li class="list-group-item"><a href="#">Velas de soja</a></li>
 							<li class="list-group-item"><a href="#">Pintura en madera</a></li>
-							<li class="list-group-item"><a href="#">Difusores y perfuminas</a></li>
+							<li class="list-group-item"><a href="#">Sahumerios</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col mb-4">
 					<div class="card card-efecto shadow bg-body rounded-sm">
-						<img src="../assets/vela3.jpg" class="card-img-top" alt="vela 2">
+						<img src="../assets/vela3.jpg" class="card-img-top" alt="vela_sumak">
 						<div class="card-body text-center">
 							<h5 class="card-title text-center">vela sumak</h5>
 							<a href="#" class="btn btn-primary btn-lg btn-block" role="button" aria-pressed="true">ver
@@ -143,7 +143,7 @@
 				</div>
 				<div class="col mb-4">
 					<div class="card card-efecto shadow bg-body rounded-sm">
-						<img src="../assets/vela1.jpg" class="card-img-top" alt="vela 2">
+						<img src="../assets/vela1.jpg" class="card-img-top" alt="vela_inka">
 						<div class="card-body text-center">
 							<h5 class="card-title text-center">vela inka</h5>
 							<a href="#" class="btn btn-primary btn-lg btn-block" role="button" aria-pressed="true">ver
@@ -153,7 +153,7 @@
 				</div>
 				<div class="col mb-4">
 					<div class="card card-efecto shadow bg-body rounded-sm">
-						<img src="../assets/vela2.jpg" class="card-img-top" alt="vela 2">
+						<img src="../assets/vela2.jpg" class="card-img-top" alt="vela_inti">
 						<div class="card-body text-center">
 							<h5 class="card-title text-center">vela inti</h5>
 							<a href="#" class="btn btn-primary btn-lg btn-block" role="button" aria-pressed="true">ver
@@ -165,7 +165,7 @@
 				</div>
 				<div class="col mb-4">
 					<div class="card card-efecto shadow bg-body rounded-sm">
-						<img src="../assets/caja_botanica.jpg" class="card-img-top" alt="vela 2">
+						<img src="../assets/caja_botanica.jpg" class="card-img-top" alt="caja_botanica">
 						<div class="card-body text-center">
 							<h5 class="card-title text-center">Caja BotánIca</h5>
 							<a href="#" class="btn btn-primary btn-lg btn-block" role="button" aria-pressed="true">ver
@@ -175,7 +175,7 @@
 				</div>
 				<div class="col mb-4">
 					<div class="card card-efecto shadow bg-body rounded-sm">
-						<img src="../assets/caja_corazon.jpg" class="card-img-top" alt="vela 2">
+						<img src="../assets/caja_corazon.jpg" class="card-img-top" alt="caja_corazon">
 						<div class="card-body text-center">
 							<h5 class="card-title text-center">Caja Corazón</h5>
 							<a href="#" class="btn btn-primary btn-lg btn-block" role="button" aria-pressed="true">ver
@@ -185,7 +185,7 @@
 				</div>
 				<div class="col mb-4">
 					<div class="card card-efecto shadow bg-body rounded-sm">
-						<img src="../assets/caja_odisea.jpg" class="card-img-top" alt="vela 2">
+						<img src="../assets/caja_odisea.jpg" class="card-img-top" alt="caja_odisea">
 						<div class="card-body text-center">
 							<h5 class="card-title text-center">Caja Odisea</h5>
 							<a href="#" class="btn btn-primary btn-lg btn-block" role="button" aria-pressed="true">ver
@@ -197,7 +197,7 @@
 				</div>
 				<div class="col mb-4">
 					<div class="card card-efecto shadow bg-body rounded-sm">
-						<img src="../assets/soon.jpg" class="card-img-top" alt="vela 2">
+						<img src="../assets/soon.jpg" class="card-img-top" alt="cooming_soon">
 						<div class="card-body text-center">
 							<h5 class="card-title text-center">Próximamente</h5>
 						</div>
