--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>MUNAY homedeco | Nosotros</title>
-	<link rel="icon" href="../assets/favico.ico">
+	<link rel="icon" href="../assets/logo_white.ico">
 	<meta name="description"
 		content="TIENDA ONLINE DE DECORACIÓN - Encontrá Todo en MUNAY homedeco, Entrá y conocé todo sobre nosotros!.">
 	<meta name="keywords" content="tienda,nosotros,historia,velas,diseño">
