--- a/pages/login.html
+++ b/pages/login.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>MUNAY homedeco | Log-in</title>
-	<link rel="icon" href="../assets/favico.ico">
+	<link rel="icon" href="../assets/logo_white.ico">
 	<meta name="description"
 		content="TIENDA ONLINE DE DECORACIÓN - Encontrá Todo en MUNAY homedeco, Entrá y conocé! Registrate en nuestra en nuestra pagina y se parte de nosotros.">
 	<meta name="keywords" content="tienda,velas,login,usuario,contraseña">
