--- a/pages/singin.html
+++ b/pages/singin.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>MUNAY homedeco|Sing-in</title>
-	<link rel="icon" href="../assets/favico.ico">
+	<title>MUNAY homedeco | Sing-in</title>
+	<link rel="icon" href="../assets/logo_white.ico">
 	<meta name="description"
 		content="TIENDA ONLINE DE DECORACIÓN - Encontrá Todo en MUNAY homedeco, Entrá y conocé! Inicia sesion en nuestra en nuestra pagina y hace tus pedidos.">
 	<meta name="keywords" content="tienda,velas,singin,usuario,contraseña,registro">
