--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>MUNAY homedeco | Tienda</title>
-	<link rel="icon" href="../assets/favico.ico">
+	<link rel="icon" href="../assets/logo_white.ico">
 	<meta name="description"
 		content="TIENDA ONLINE DE DECORACIÓN - Encontrá Todo en MUNAY homedeco, Entrá y conocé! En nuestra tienda encontraras productos para decorar tu hogar.">
 	<meta name="keywords" content="tienda,productos,velas,pintura,sahumerios,regalos,decoración">
